# tagslut

./:  DJ Library Management Guide.md  .codexignore  .coverage  .coveragerc  .env.example  .flake8  .gitignore  .output.txt  200.js  2026-04-14__08-56-21__INGEST_RUNBOOK.md  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_HELP_PARITY_WORK_ITEM.md  CODEOWNERS  CODEX_PROMPT.md  CONSOLIDATION.md  CONSOLIDATION_REFACTORING_GUIDE.md  CONTRIBUTING.md  CRITICAL_STATUS.md  Codex Audit & Arbitration Prompt.md  DATABASE_LOCK_FIX.md  DEDUPE_DIR.txt  DEFINITIVE_WORKFLOW.md  DJ_PIPELINE_FULL_REPAIR_CODEX.md  Dual-SourceTIDALBeatportMetadataFlow.md  FILE_ANALYSIS.md  FINAL_STATUS.md  GETTING_STARTED.md  GUIDE.md  HANDOVER.md  HANDOVER_NOTE.md  INDEX.md  Implement an operator-authorized clean lossy pool builder for Rekordbox.md  LAUNCHER_GUIDE.md  LICENSE  MANIFEST.in  MERGE_NOTE.md  MODERNIZATION_SUMMARY.md  (+332 more)
.claude/: AGENT.md  AGENTS.md  CLAUDE.md  settings.local.json
.codex/: AGENT.md  CODEX_AGENT.md  CODEX_BOOTSTRAP_REPORT.md  CODEX_PROMPTS.md  CODEX_SESSION_RECAP.md  CODEX_SESSION_STARTUP.prompt.md  REPO_SURFACE.md  TASK_PROMPTS.md  task_1_1_plan.md
.github/: PARALLEL_EXECUTION_PLAN.md  copilot-instructions.md
.junie/: guidelines.md
.postman/: resources.yaml  workflows.yaml
archive/: PATCH_v2.patch
artifacts/: README.md  audit_layout_2026-03-08.txt  flake8_baseline_2026-03-08.txt  mypy_baseline_2026-03-08.txt  test_baseline_2026-03-08.txt
audio_suite/: LICENSE  README.md  pyproject.toml  settings.toml
audio_suite/src/audio_suite/: __init__.py  cli.py
audio_suite/src/audio_suite/core/: config.py  db.py  models.py  utils.py
audio_suite/src/audio_suite/get/: __init__.py
audio_suite/src/audio_suite/get/providers/: __init__.py  qobuz.py  tidal.py
audio_suite/src/audio_suite/plugins/: __init__.py
audio_suite/src/audio_suite/plugins/export/: __init__.py  playlist.py
audio_suite/src/audio_suite/plugins/match/: __init__.py  engine.py
audio_suite/src/audio_suite/tui/: __init__.py  wizard.py
config/: gig_overlay_rules.yaml  non_dj_sample.m3u  pop_non_dj.m3u  providers.toml  zones.yaml.example
dedupe/: __init__.py  cli.py  config.py  deduper.py  fingerprints.py  global_recovery.py  health.py  health_score.py  healthcheck.py  healthscore.py  hrm_relocation.py  integrity_scanner.py  legacy_cli.py  manifest.py  matcher.py  metadata.py  picard_path.py  quarantine.py  rstudio_parser.py  scanner.py  step0.py  utils.py
docs/: ACTION_PLAN.md  API_FUNCTIONS.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  ARTIFACTS.md  AUDIT_STATE_2026.md  BEATPORT_API_STATUS.md  CLEANUP_MANIFEST.md  CLEAN_SCAN_WORKPLAN.md  CODEX_BACKGROUND.md  CODEX_PROMPT.md  CODEX_PROMPTS_ROUND2.md  CODEX_PROMPTS_ROUND3.md  COMMAND_GUIDE.md  CONFIG.md  CORE_MODEL.md  CREDENTIAL_MANAGEMENT.md  DB_BACKUP.md  DB_V3_SCHEMA.md  DEFENSIVE_CODE_ADDITIONS.md  DJ_PIPELINE.md  DJ_POOL.md  DJ_REVIEW_APP.md  DJ_WORKFLOW.md  DOWNLOAD_STRATEGY.md  FAST_WORKFLOW.md  FILE_ANALYSIS.md  GUIDE_v3_BULLETPROOF.md  HANDOVER.md  IMPLEMENTATION_PLAN_DJ_GIG.md  IMPLEMENTATION_PLAN_SCANNER_V1.md  INGESTION_PROVENANCE.md  INTEGRITY_DESIGN_FAILURES.md  METADATA_AUTH_RESOURCES.md  METADATA_WORKFLOW.md  MGMT_MODE.md  MIGRATION.md  MOVE_EXECUTOR_COMPAT.md  MULTI_PROVIDER_ID_POLICY.md  OPERATIONS.md  (+71 more)
fast_ops/: library_integrity_check.py  move_commune_big.sh
files/: BACKFILL_GUIDE.md  PROVENANCE_INTEGRATION.md  get-intake-refactored.py
flac_dedupe.egg-info/: PKG-INFO  SOURCES.txt
handoff_bundle_repo_context_20260315_092411/: CHATGPTREPORT_29260315.md  PERPLEXITYREPORT_20260315.md
legacy/: README.md
near_dupe_verify_out/: dedupe_quarantine_streammd5.sh  dupes_streammd5.csv  stream_md5.csv
patches/: docs-updates.diff  patch.patch  patch_missing_files.txt  patch_paths_full.txt
phase1_harvest/: aggregate_metadata_full.py
postman/: README.md  collection.example.json  collection.json  environment.json  environment.secrets.example.json
runs/: TASK_LOG.md
scripts/: README.md  __init__.py  analyze_filename_dupes_metadata.py  analyze_quarantine_subdir.py  apply_beatport_playlist_dump_refs.py  apply_patch_except_pyc.py  apply_patch_subset.py  archive_root.sh  audit_and_dedupe_pool.py  audit_repo_layout.py  audit_xml.py  auto_env.py  automate_postscan.sh  backfill_v3_identity_links.py  backfill_v3_provenance_from_logs.py  backup_dbs.sh  best_by_hash.py  best_by_quality.py  best_copy.py  best_copy.sql  bootstrap_duration_refs_local.py  bootstrap_relink_db.py  build_duration_refs_from_isrc_providers.py  build_new_music.py  build_new_music_from_global_keeps.py  check_audio_scan_progress.py  check_cli_docs_consistency.py  check_dedupe_plan.py  check_garbage_dupeguru_dupes.py  check_gemini_duplicates.py  check_hardcoded_paths.sh  check_missing_backup_variants.py  check_schema.py  check_trashed_against_db.py  check_truncation.py  classify_tracks_sqlite.py  combine_found_candidates.py  consolidate_mp3_leftovers.py  crosscheck_garbage_backup.py  db_prune_missing_files.py  (+111 more)
supabase/: .gitignore  config.toml  tagslut_supabase_ops.md
tagslut/: __init__.py  __main__.py  integrity_scanner.py
tagslut_import/: .policy.toml  DECISIONS.md
tests/: conftest.py  test_backfill_identity_v3.py  test_beatport_rate_limit.py  test_build_pool_v3.py  test_canon_apply.py  test_check_promotion_preferred_invariant_v3.py  test_classify_promote.py  test_cli.py  test_cli_alias_warning.py  test_cli_command_interface.py  test_cli_docs_consistency_script.py  test_cli_transitional_warnings.py  test_common_helpers.py  test_common_helpers_fixed.py  test_config.py  test_cross_root_prune.py  test_db_upgrade.py  test_db_v3_schema.py  test_db_writer.py  test_dedupe_sync.py  test_dj_export_builder_v3.py  test_dj_profile_v3.py  test_enrich_dj_tags.py  test_enrichment_cascade.py  test_exec_engine_operations.py  test_exec_engine_phase3.py  test_exec_receipts_phase3.py  test_export_dj_candidates_v3.py  test_export_ready_v3.py  test_extract_tracklists_from_links.py  test_file_operations_audit.py  test_filters.py  test_final_library_layout.py  test_fingerprint_integration.py  (+67 more)
(+1860 files in other folders)
