[tool.poetry]
name = "tagslut"
version = "2.0.0"
description = "Tagslut: recovery-first music library deduplication and metadata orchestration toolkit."
authors = ["Georges Khawam <georgeskhawam@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dedupe"}, {include = "tagslut"}]

[project]
name = "tagslut"
version = "2.0.0"
description = "Tagslut: recovery-first music library deduplication and metadata orchestration toolkit."
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{ name = "Georges Khawam", email = "georgeskhawam@users.noreply.github.com" },
]
dependencies = [
    "click>=8.1",
    "mutagen>=1.46",
    "jsonschema>=4.0",
    "tqdm (>=4.66)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "roonapi (>=0.1.6,<0.2.0)",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "flask (>=3.1.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
]

[project.scripts]
tagslut = "dedupe.cli.main:cli"
taglslut = "dedupe.cli.main:cli"
dedupe = "dedupe.cli.main:cli"

[tool.poetry.scripts]
tagslut = "dedupe.cli.main:cli"
taglslut = "dedupe.cli.main:cli"
dedupe = "dedupe.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
mutagen = "^1.46"
tomli = "^2.0"  # Only needed for Python < 3.11, but harmless to keep
jsonschema = "^4.0"
tqdm = "^4.66"
httpx = "^0.27"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
mypy = "^1.0"
flake8 = "^7.0.0"
types-click = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
