[project]
name = "tagslut"
version = "3.0.0"
description = "Tagslut: hi-res music library management and DJ pool orchestration toolkit for audiophile DJs."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Georges Khawam", email = "georgeskhawam@users.noreply.github.com" },
]
dependencies = [
    "click>=8.1",
    "mutagen>=1.46",
    "jsonschema>=4.0",
    "tqdm>=4.66",
    "pandas>=2.3.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "rapidfuzz>=3.14.3,<4.0.0",
    "unidecode>=1.4.0,<2.0.0",
    "roonapi>=0.1.6,<0.2.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.7,<14.0",
    "matplotlib>=3.8,<4.0",
    "pyrekordbox>=0.3,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "pytest (>=9.0.2,<10.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
]

[project.scripts]
tagslut = "tagslut.cli.main:cli"

[project.optional-dependencies]
# Install with: pip install tagslut[web]
web = ["flask>=3.1.2,<4.0.0"]

[tool.poetry]
packages = [{ include = "tagslut" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
tagslut-api-sdk = { path = "postman/sdks/Collections SDKs/tagslut - API/python", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^6.0"
mypy = "^1.0"
flake8 = "^7.0.0"
types-click = "^7.1"
ipykernel = "^7.2.0"
tiddl = {version = "^3.2.2", python = ">=3.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:pylama"

[tool.coverage.run]
data_file = ".coverage.tagslut"
source = ["tagslut"]
omit = [
    "tagslut/storage/v2/*",
    "tagslut/storage/v3/legacy/*",
    "tagslut/storage/v3/migrations/*",
    "tagslut/storage/migrations/*",
]

[tool.coverage.report]
fail_under = 60
show_missing = true
