[tool.poetry]
name = "audio-suite"
version = "0.1.0"
description = "Unified CLI for managing FLAC libraries, matching playlists and downloading from streaming services."
authors = ["Audio Suite Developers <developers@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "audio_suite", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "^0.9.0"
dynaconf = "^3.2.3"
sqlalchemy = "^2.0.0"
keyring = "^24.3.0"
rich = "^13.7.0"

[tool.poetry.scripts]
audio-suite = "audio_suite.cli:app"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"